makes main page

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 href="mailto:info@devstudio.com"
                 target="_blank"
               >
-                <svg class="header__icon" width="16" height="12">
+                <svg class="header__icon" width="14" height="10">
                   <use href="./img/icons.svg#letter"></use>
                 </svg>
                 info@devstudio.com</a
@@ -68,13 +68,16 @@
                 href="tel:+380961111111"
                 target="_blank"
               >
-                <svg class="header__icon" width="10" height="16">
+                <svg class="header__icon" width="10" height="14">
                   <use href="./img/icons.svg#smartphone"></use>
                 </svg>
                 +38 096 111 11 11</a
               >
             </li>
           </ul>
+          <svg class="header__menu" width="40" height="40">
+            <use href="./img/icons.svg#menu"></use>
+          </svg>
         </div>
       </div>
     </header>
@@ -193,7 +196,6 @@
         <div class="container">
           <h2 class="team__title" data-aos="zoom-in-up">Наша команда</h2>
           <ul class="team__list">
-            <!-- Перша людина -->
             <li class="team__item" data-aos="fade-up-right">
               <img
                 class="team__photo"
@@ -250,7 +252,6 @@
                 </li>
               </ul>
             </li>
-            <!-- Друга людина -->
             <li class="team__item" data-aos="fade-up">
               <img
                 class="team__photo"
@@ -307,7 +308,6 @@
                 </li>
               </ul>
             </li>
-            <!-- Третя людина -->
             <li class="team__item" data-aos="fade-up">
               <img
                 class="team__photo"
@@ -364,7 +364,6 @@
                 </li>
               </ul>
             </li>
-            <!-- Четверта людина -->
             <li class="team__item" data-aos="fade-up-left">
               <img
                 class="team__photo"
@@ -483,16 +482,16 @@
             <a class="footer__logo" href="#header"
               >Web<span class="footer__logo__accent--footer">Studio</span></a
             >
-            <!-- Адрес -->
             <address class="footer__address">
-              <a
-                class="footer__map"
-                target="_blank"
-                href="https://www.google.com/maps/place/Lesi+Ukrainky+Blvd,+26,+Kyiv,+Ukraine,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858!16s%2Fg%2F1tctq5jv?entry=ttu"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
-              <!-- Контакти -->
               <ul class="footer__list">
+                <li class="footer__item">
+                  <a
+                    class="footer__map"
+                    target="_blank"
+                    href="https://www.google.com/maps/place/Lesi+Ukrainky+Blvd,+26,+Kyiv,+Ukraine,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858!16s%2Fg%2F1tctq5jv?entry=ttu"
+                    >м. Київ, пр-т Лесі Українки, 26</a
+                  >
+                </li>
                 <li class="footer__item">
                   <a
                     class="footer__connection"
@@ -581,7 +580,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <form action="" class="form">
           <button class="modal__close-btn" type="button" data-modal-close>
@@ -646,14 +645,14 @@
           <button class="modal__btn" type="submit">Відправити</button>
         </form>
       </div>
-    </div>
-    <div class="scroll container">
+    </div> -->
+    <!-- <div class="scroll container">
       <a class="scroll__link" href="#scroll-to-top">
         <svg class="scroll__icon" width="29" height="22">
           <use href="./img/icons.svg#top-arrow"></use>
         </svg>
       </a>
-    </div>
+    </div> -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
