--- a/index.html
+++ b/index.html
@@ -580,6 +580,7 @@
         </div>
       </div>
     </footer>
+    <!-- Modal -->
     <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <form action="" class="form">
@@ -646,6 +647,7 @@
         </form>
       </div>
     </div> -->
+    <!-- Scroll to top -->
     <!-- <div class="scroll container">
       <a class="scroll__link" href="#scroll-to-top">
         <svg class="scroll__icon" width="29" height="22">
