--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
       </div>
     </footer>
     <!-- Modal -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <form action="" class="form">
           <button class="modal__close-btn" type="button" data-modal-close>
@@ -634,7 +634,7 @@
           <label class="modal__label">
             <input type="checkbox" class="modal__checkbox" required />
             <div class="modal__fake">
-              <svg class="modal__fake-svg" width="11" height="8">
+              <svg class="modal__icon" width="11" height="8">
                 <use href="./img/icons.svg#tick"></use>
               </svg>
             </div>
@@ -646,7 +646,7 @@
           <button class="modal__btn" type="submit">Відправити</button>
         </form>
       </div>
-    </div> -->
+    </div>
     <!-- Scroll to top -->
     <!-- <div class="scroll container">
       <a class="scroll__link" href="#scroll-to-top">
