makes scroll to top

--- a/index.html
+++ b/index.html
@@ -648,11 +648,13 @@
       </div>
     </div>
     <!-- Scroll to top -->
-    <a class="scroll__link" href="#scroll-to-top">
-      <svg class="scroll__icon" width="29" height="22">
-        <use href="./img/icons.svg#top-arrow"></use>
-      </svg>
-    </a>
+    <div class="scroll scroll__container container">
+      <a class="scroll__link" href="#scroll-to-top">
+        <svg class="scroll__icon" width="29" height="22">
+          <use href="./img/icons.svg#top-arrow"></use>
+        </svg>
+      </a>
+    </div>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
